# ai-closed-loop-lab

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-to-nas.yml  docker-build.yml  tests.yml
.windsurf/workflows/: setup.md  start-services.md
config/: rules.yaml  social_accounts.yaml  trading.yaml  trading_persona.yaml
db/migrations/: 001_strategy_mining.sql  002_holdings.sql
docker/: Dockerfile  docker-compose.nas.yml  docker-compose.yml
docs/: agent_catalog.md  architecture.md  cognitive_agent_design.md  developer_guide.md  event_catalog.md  nas-deployment.md  operations.md  operations_manual.md  phase1.md  phase1_assessment.md  phase2.md  phase3.5.md  phase3.md  phase4-ai-platform.md  requirements.md  runtime_overview.md  system_architecture.md
scripts/: dashboard.py  deploy-manual.sh  deploy-to-nas.sh  dev  diagnose_imports.py  dispatch_to_sma.py  migrate_positions.py  nas-setup.sh  query_brain.py  run_daily_scan.py  run_daily_workflow.py  run_event_monitor.py  run_explorer.py  run_full_loop.py  run_strategy_metrics.py  run_trading_agent_service.py  run_webhook_listener.py  scheduler.py  sm_analyze_style.py  sm_infer_trades.py  sm_ingest_holdings.py  sm_list_wechat_urls.py  smoke_test_phase2.py  smoke_test_phase3.py  start_all.sh  sync_sma_engagements.py  test_intraday_data.py
src/: __init__.py
src/agents/: __init__.py
src/ai_platform/: cli.py
src/central_brain/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  test_central_brain.py  test_event_bus.py  test_event_monitor_api.py  test_llm_observability.py  test_observability_store.py  test_rule_engine.py  test_state.py  test_strategy_analyzer.py  test_text_compliance.py  test_topic_router.py  test_trading_agent_cache.py
(+92 files in other folders)
