[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-closed-loop-lab"
version = "0.1.0"
description = "AI Closed Loop Trading Lab — 沈经理的AI闭环实验室"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=9.0",
    # Data & Storage
    "pandas>=2.0",
    "numpy>=1.26",
    "sqlite-vec>=0.1",
    "sqlalchemy>=2.0",
    # Market Data (A-share)
    "akshare>=1.14",
    # Visualization
    "matplotlib>=3.8",
    "plotly>=5.20",
    # Utils
    "pyyaml>=6.0",
    "schedule>=1.2",
    "jinja2>=3.1",
    "rich>=13.0",
    # Optional: WebSocket for real-time
    "websockets>=12.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[project.scripts]
ai-lab = "ai_platform.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "Pillow>=10.0",          # 图片脱敏（webhook_listener）
]
# Phase 2+ 需要时再装：mamba activate ai-lab && pip install -e ".[quant]"
quant = [
    "pyqlib>=0.9",           # 注意：PyPI 包名是 pyqlib 不是 qlib
    "easyquotation>=0.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
